--- a/mokepon.html
+++ b/mokepon.html
@@ -23,8 +23,8 @@
 
         <section id="select-attack">
             <h2>Choose your attack:</h2>
-            <p>Your pet <span id="player-pet"></span> have <span>3</span> lives</p>
-            <p>Enemy's pet <span id="enemy-pet"></span> has <span>3</span> lives </p>
+            <p>Your pet <span id="player-pet"></span> have <span id="player-lives">3</span> lives</p>
+            <p>Enemy's pet <span id="enemy-pet"></span> has <span id="enemy-lives">3</span> lives </p>
             <p>
                 <button id="button-fire">Fire 🔥</button>
                 <button id="button-water">Water 💧</button>
